<resources>
    <string name="app_name">Prescryp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="retake_pic">Retake Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="update_profile_picture">Update Picture</string>
    <string name="facebook_app_id">1950717054994030</string>
    <string name="fb_login_protocol_scheme">fb1950717054994030</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="p_folder">P. Folder</string>
    <string name="reminders">Reminders</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="reminder_suggestions">Reminder Suggestions</string>
    <string name="medicines">Order Medicines</string>
    <string name="schedule">Schedule</string>
    <string name="repeat">Repeat</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="until_i_stop">Until I stop</string>
    <string name="num_3">3</string>
    <string name="days">days</string>
    <string name="set_routine">Set Routine</string>
    <string name="_1_tablet_with_lunch">1 Tablet with Lunch</string>
    <string name="_1_tablet_with_dinner">1 Tablet with Dinner</string>
    <string name="_1_tablet_with_breakfast">1 Tablet with Breakfast</string>
    <string name="add_new_event">Add New Event</string>
    <string name="daily">Daily</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="of_every_month">of every month</string>
    <string name="_01st_02nd">01st, 02nd</string>
    <string name="_01_02">01, 02</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="breakfast">Breakfast</string>
    <string name="dosage">Dosage</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="with">With</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="edit_breakfast_time">Edit Breakfast time</string>
    <string name="edit_lunch_time">Edit Lunch time</string>
    <string name="edit_dinner_time">Edit Dinner time</string>
    <string name="_06_00am">06:00AM</string>
    <string name="_06_30am">06:30AM</string>
    <string name="_07_00am">07:00AM</string>
    <string name="_07_30am">07:30AM</string>
    <string name="_08_00am">08:00AM</string>
    <string name="_08_30am">08:30AM</string>
    <string name="_09_00am">09:00AM</string>
    <string name="_09_30am">09:30AM</string>
    <string name="_10_00am">10:00AM</string>
    <string name="_10_30am">10:30AM</string>
    <string name="_11_00am">11:00AM</string>
    <string name="_11_30am">11:30AM</string>
    <string name="set_breakfast_time">SET BREAKFAST TIME</string>
    <string name="set_lunch_time">SET LUNCH TIME</string>
    <string name="_12_00pm">12:00PM</string>
    <string name="set_dinner_time">SET DINNER TIME</string>
    <string name="ok">OK</string>
    <string name="_12_30pm">12:30PM</string>
    <string name="_01_00pm">01:00PM</string>
    <string name="_01_30pm">01:30PM</string>
    <string name="_02_00pm">02:00PM</string>
    <string name="_02_30pm">02:30PM</string>
    <string name="_03_00pm">03:00PM</string>
    <string name="_03_30pm">03:30PM</string>
    <string name="_04_00pm">04:00PM</string>
    <string name="_04_30pm">04:30PM</string>
    <string name="_05_00pm">05:00PM</string>
    <string name="_05_30pm">05:30PM</string>
    <string name="_06_00pm">06:00PM</string>
    <string name="_06_30pm">06:30PM</string>
    <string name="_07_00pm">07:00PM</string>
    <string name="_07_30pm">07:30PM</string>
    <string name="_08_00pm">08:00PM</string>
    <string name="_08_30pm">08:30PM</string>
    <string name="_09_00pm">09:00PM</string>
    <string name="_09_30pm">09:30PM</string>
    <string name="_10_00pm">10:00PM</string>
    <string name="_10_30pm">10:30PM</string>
    <string name="_11_00pm">11:00PM</string>
    <string name="_11_30pm">11:30PM</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="your_reminders">Your Reminders</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="take_medicines">Take Medicines</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="we_will_send_you_a_one_time_sms_message">We will send you a OTP message.</string>
    <string name="india_91">India (+91)</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to</string>
    <string name="_91_7098314519">(+91) 7098314519</string>
    <string name="next_activity">next_activity</string>
    <string name="home_image">Home Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="get_qr_code">Get QR Code</string>
    <string name="hospital_name">HOSPITAL NAME</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="dose">Dose</string>
    <string name="duration">Duration</string>
    <string name="strength">Strength</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="set_now">SET NOW</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign In Here</string>
    <string name="connect_with">Connect with</string>
    <string name="or">--OR--</string>
    <string name="new_to_presdigi_create_an_account">New to PresDigi? Create an account.</string>
    <string name="facebook_button">Facebook Button</string>
    <string name="google_button">Google button</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo">Logo</string>
    <string name="search_medicines">Search Medicines</string>
    <string name="back_icon">back icon</string>
    <string name="edit">Edit</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="_3_prescriptions">3 PRESCRIPTIONS</string>
    <string name="group_by">GROUP BY</string>
    <string name="title_activity_new_remider">NewRemiderActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_refer_and_earn">ReferAndEarnActivity</string>
    <string name="title_activity_attach_prescription">AttachPrescriptionActivity</string>
    <string name="title_activity_upload_attached_prescription">UploadAttachedPrescriptionActivity
    </string>
    <string name="title_activity_show_digital_prescription">ShowDigitalPrescriptionActivity</string>
    <string name="title_activity_select_address">SelectAddressActivity</string>
    <string name="title_activity_medicine">MedicineActivity</string>
    <string name="title_activity_add_new_address">AddNewAddressActivity</string>
    <string name="title_activity_address_maps">Map</string>
    <string name="title_activity_change_delivery_area">ChangeDeliveryAreaActivity</string>
    <string name="change_delivery_area">Change Delivery Area</string>
    <string name="search_your_delivery_area">Search your delivery area...</string>
    <string name="title_activity_select_address_for_checkout">SelectAddressForCheckoutActivity
    </string>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_activity_track_order">TrackOrderActivity</string>
    <string-array name="stepLabels">
        <item>Confirmed</item>
        <item>Dispatched</item>
        <item>Delivered</item>
    </string-array>
    <string name="title_activity_your_order_list">YourOrderListActivity</string>
    <string name="title_activity_generate_qrcode">GenerateQRCodeActivity</string>
    <string name="title_activity_change_city">ChangeCityActivity</string>
</resources>
