<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/alarm"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/medicineSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/reminder_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/reminders"
                app:srcCompat="@drawable/reminder" />

            <TextView
                android:id="@+id/reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="Pill Reminders"
                android:gravity="center" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/medicineSearch"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/folder"
            app:layout_constraintStart_toEndOf="@+id/alarm"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/medicine_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/medicines"
                app:srcCompat="@drawable/medicines" />


            <TextView
                android:id="@+id/medicine_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/medicine_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/medicines" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/folder"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/medicineSearch"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/folderImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/p_folder"
                app:srcCompat="@drawable/medical_history" />


            <TextView
                android:id="@+id/folderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/folderImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="Your Records"
                android:gravity="center" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/past_order_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="PAST ORDERS"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/past_order_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/past_order_heading" />

    <TextView
        android:id="@+id/show_more_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="SHOW MORE"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/past_order_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/past_order_heading" />


</androidx.constraintlayout.widget.ConstraintLayout>
